# maple-robotics

./: .gitignore  .readthedocs.yaml  LICENCE  README.md  go.mod  main.go  maple  pyproject.toml  pytest.ini
cmd/: doctor.go  list.go  logs.go  ps.go  pull.go  rm.go  root.go  run.go  serve.go  show.go  stop.go  version.go
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  python_docs_requirements.txt
docs/advanced/: adapters.rst  configuration.rst  docker.rst
docs/api/: adapters.rst  backend.rst  cli.rst  scheduler.rst  server.rst
docs/examples/: basic.rst  custom-env.rst  custom-policy.rst
docs/getting-started/: architecture.rst  installation.rst  quickstart.rst
docs/guide/: daemon.rst  environments.rst  evaluations.rst  policies.rst
docs/source/: api.rst  conf.py  index.rst
docs/source/commands/: config.rst  env.rst  eval.rst  list.rst  policy.rst  pull.rst  remove.rst  run.rst  serve.rst  sync.rst
docs/source/guides/: adding-environments.rst  adding-policies.rst  configuration.rst  contributing.rst  installation.rst  policy_envs.rst  quickstart.rst
maple/: __init__.py  config.py  eval.py
maple/adapters/: __init__.py  base.py  registry.py
maple/adapters/custom/: __init__.py
maple/backend/: __init__.py  registry.py
maple/backend/envs/: __init__.py  alohasim.py  base.py  bridge.py  fractal.py  libero.py  robocasa.py  simplerenv.py
maple/backend/policy/: __init__.py  base.py  gr00tn15.py  openpi.py  openvla.py  smolvla.py
maple/cmd/: __init__.py  maple_cli.py  vla_cli.py
maple/cmd/cli/: __init__.py  config.py  doctor.py  env.py  list.py  logs.py  misc.py  policy.py  pull.py  rmv.py  serve.py  snc.py
maple/server/: __init__.py  daemon.py
maple/state/: __init__.py  store.py
maple/utils/: __init__.py  cleanup.py  config.py  eval.py  health.py  lock.py  logging.py  misc.py  paths.py  retry.py  spec.py  timeout.py
server/: server.go
storage/: blob.go  config.go  manifest.go  paths.go
test/: __init__.py  conftest.py  test_adapters.py  test_backends.py  test_cli.py  test_config.py  test_health.py  test_integration.py  test_store.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_daemon.py  test_docker.py
tests/unit/: __init__.py  test_adapters.py  test_backend.py  test_cli.py  test_state_store.py  test_utils_config.py  test_utils_health.py
vla/adapters/: __init__.py  registry.py
vla/adapters/custom/: __init__.py
vla/backend/: registry.py
vla/backend/envs/: base.py  libero.py  registry.py
vla/backend/policy/: base.py  (+2 more)
vla/cmd/: cli.py  vla_cli.py
vla/schedular/: __init__.py
vla/scheduler/: scheduler.py
vla/server/: daemon.py
vla/state/: store.py
vla/utils/: cleanup.py  lock.py  paths.py  retry.py
(+20 files in other folders)
