[project]
name = "vla"
version = "0.0.1"
dependencies = ["typer", 
                "rich",
                "fastapi",
                "uvicorn",
                "requests",
                "numpy",
                "pillow",
                "huggingface_hub",
                "pyyaml",
                "docker",
                "mediapy>=1.2.4",
                "imageio",
                "imageio-ffmpeg"]

[project.scripts]
vla = "vla.cmd.vla_cli:main"