[project]
name = "maple-robotics"
version = "0.0.2"
description = "A CLI daemon interface for evaluating robotics policies across diverse simulation environments"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Shaswat Garg", email = "sis_shaswat@outlook.com" }]
requires-python = ">=3.10"
keywords = [
    "robotics",
    "reinforcement-learning",
    "policy-evaluation",
    "simulation",
    "vla",
    "embodied-ai",
    "robot-learning",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["typer", 
                "rich",
                "fastapi",
                "uvicorn",
                "requests",
                "numpy",
                "pillow",
                "huggingface_hub",
                "pyyaml",
                "docker",
                "mediapy>=1.2.4",
                "imageio",
                "imageio-ffmpeg"]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Repository = "https://github.com/Shaswat2001/maple-robotics"
Documentation = "https://maple-robotics.readthedocs.io"
Issues = "https://github.com/Shaswat2001/maple-robotics/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maple/"]

[tool.hatch.build]
include = [
  "maple/**/*",
  "maple/*",
]

[project.scripts]
maple = "maple.cmd.maple_cli:main"